crates/cribo/tests/snapshots/execution_results@xfail_bundle_third_party_metadata_class_order.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_metadata_class_order/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "provider metadata missing",
}
